# opengl-graphics3d

MyPlace2025/: _.cpp  _.h  application.cpp  application.h  document.cpp  document.h  impact.cpp  impact.h  main_frame.cpp  main_frame.h  matter.txt  opengl_graphics3d_MyPlace2025.vcxproj  opengl_graphics3d_MyPlace2025.vcxproj.filters  opengl_land_MyPlace2025.vcxproj  opengl_land_MyPlace2025.vcxproj.filters  pane_impact.cpp  pane_impact.h
MyPlace2025/AppCore/: Application.cpp  Application.h
MyPlace2025/Common/: Types.h  _constant.h
MyPlace2025/Core/: Camera.cpp  Camera.h  Input.cpp  Input.h  ResourceManager.cpp  ResourceManager.h  gl_container.cpp  gl_container.h
MyPlace2025/OpenGL/: application.cpp  application.h  engine.cpp
MyPlace2025/Renderer/: RenderData.cpp  RenderData.h  Renderer.cpp  Renderer.h
MyPlace2025/Renderer/Types/: CubeMap.cpp  CubeMap.h  Mesh.cpp  Mesh.hpp  Model.cpp  Model.h  Texture.cpp  Texture.h
MyPlace2025/Shader/: Shader.cpp  Shader.h
MyPlace2025/__implement/: CMakeLists.txt  main.cpp  shared_opengl_graphics3d_MyPlace2025.vcxproj  shared_opengl_land_MyPlace2025.vcxproj
MyPlace2025/scene/: main.cpp  main.h
MyPlace2025/src/Renderer/: RenderData.cpp
MyPlace2025_1/: _.cpp  _.h  application.cpp  application.h  document.cpp  document.h  impact.cpp  impact.h  main_frame.cpp  main_frame.h  opengl_graphics3d_MyPlace2025.vcxproj.filters  pane_impact.cpp  pane_impact.h
MyPlace2025_1/Core/: Camera.cpp  Input.h  Window.cpp
MyPlace2025_1/OpenGL/: engine.cpp  engine.h
MyPlace2025_1/Renderer/: RenderData.cpp  Renderer.cpp
MyPlace2025_1/Renderer/Types/: CubeMap.cpp  Model.h  Shapes.h
MyPlace2025_1/__implement/: main.cpp
continuum/: CMakeLists.txt  README.md  _.cpp  _.h  _opengl.h  application.cpp  application.h  document.cpp  document.h  impact.cpp  impact.h  main_frame.cpp  main_frame.h  matter.txt  opengl_graphics3d_continuum.vcxproj  opengl_graphics3d_continuum.vcxproj.filters  pane_impact.cpp  pane_impact.h
continuum/__implement/: CMakeLists.txt  main.cpp  shared_opengl_graphics3d_continuum.vcxproj
continuum/scene/: main.cpp  main.h
graphics3d_opengl/: CMakeLists.txt  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Shapes.h  Texture.cpp  Texture.h  Window.h  _.cpp  _.h  _constant.h  _factory.cpp  _opengl.h  aaa_app.cpp  aaa_application.h  aaa_application_handler.cpp  aaa_application_handler.h  aaa_camera.cpp  aaa_camera.h  aaa_file_system.h  aaa_frame.h  aaa_gl_error.h  aaa_initializers.cpp  aaa_initializers.h  aaa_render_pass.h  aaa_swap_chain.cpp  aaa_swap_chain_render_pass.h  aaa_vkc_types.h  aaa_window.h  buffer.cpp  buffer.h  context.cpp  context.h  cube_map.cpp  cube_map.h  descriptors.cpp  descriptors.h  (+30 more)
graphics3d_opengl/graphics3d_opengl.xcodeproj/: project.pbxproj
graphics3d_opengl/opengl/: Application.h  ModelMesh.h  engine.cpp
graphics3d_opengl/opengl/AppCore/: Application.cpp
graphics3d_opengl/opengl/Core/: Input.cpp  gl_container.h
graphics3d_opengl/opengl/OpenGL/: application.h
graphics3d_opengl/opengl/Renderer/Types/: CubeMap.h  Mesh.h  Texture.cpp
graphics3d_opengl/opengl/Shader/: Shader.h
graphics3d_opengl/system/: basic_render_system.cpp  basic_render_system.h  point_light_system.cpp  point_light_system.h
landen/: CMakeLists.txt  _.cpp  _.h  _opengl.h  application.cpp  application.h  document.cpp  document.h  frame.cpp  frame.h  impact.cpp  impact.h  matter.txt  opengl_graphics3d_landen.vcxproj  opengl_graphics3d_landen.vcxproj.filters
landen/__implement/: CMakeLists.txt  imgui.ini  main.cpp  shared_opengl_graphics3d_landen.vcxproj
landen/opengl/: aaa_window.h  application.cpp  application.h  buffer.cpp  device.cpp  device.h  frame_info.h  input.cpp  model.cpp  offscreen.cpp  offscreen.h  render_pass.h  renderer.cpp  renderer.h  system_point_light.cpp  types.h
landen/scene/: main.cpp  main.h
